 ####    #### ####    #### ####    #### #######      ######
 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####    Quake Army Knife 6.4 Changelog

 * [alexander]: HL2 Releated Enhancements
      - loading of .vmf (hammer map files) is available
      - CS-Source textures complete
      - QuArK Loads HL2 models and render yellow transparent boxes with the
        models size and orientation in the open gl viever. Note that lights
        must be enabled an a light entity must be in the map to make this work.
      - QuArK understands now  a mdlrendermode setup for model rendering
        additionally to the "mdl", "mdlbase" and "mdlopacity" form date specifics.
      - fixed bogus mdlopacity specific reading
      - The model selection form has been improved
      - the quarksteamfs.dll allows now retry of a steam configuration, before
        this we had to shutdown quark to be able to retry a different configuration.
      - rendermode, renderamt and rendercolor settings of brush entities are
        displayed in open gl mode
      - detect hl2 bsp format, but no loading yet 
      - remove prepare textures and build program 4 call from default config

 * [alexander]: QuArK understands now how to access Steam directly.
      (Steam must be running for that). Some new configuration entries have
      to be set up for steam access.

 * [cdunde]: Added support for Q3 based mods CoD (Call of Duty), ET
      (Enemy Territory) and UT (Urban Terror - 2 data unit files).

 * [cdunde]: Weapon entities added to the DataMOHAA file by Hannibal.

 * [Nazar]: Added additional support for JA (Jedi Academy) with full
      lists of all textures, shaders and all singleplayer entities as